# velayout

./: Makefile.am  README  configure.ac  velayout.spec.in
debian/: control.in  copyright  rules.in
src/: Makefile.am  velayout.c  velayout.h
test/: Makefile  log4crc  test.c
